# VoxelCraft

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
build_local/: blockclone
src/: main.cpp
src/core/: Block.h  Math.h  ThreadPool.h
src/game/: Game.cpp  Game.h  Player.cpp  Player.h
src/glad/: glad.c  glad.h
src/render/: MeshBuilder.cpp  MeshBuilder.h  Renderer.cpp  Renderer.h  TextureAtlas.cpp  TextureAtlas.h
src/world/: Chunk.h  ChunkSection.h  Noise.cpp  Noise.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
